name:                datalog
version:             0.2.0.2
synopsis:            An implementation of datalog in Haskell
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2
description: This is an implementation of datalog in pure Haskell.
             It is implemented as a library and can be used from within
             any Haskell application.  As a consequence, it supports both
             standard Datalog operations and arbitrary predicates written
             in Haskell.

extra-source-files: CHANGES.md

library
  default-language: Haskell2010
  exposed-modules: Database.Datalog
  other-modules:   Database.Datalog.Adornment
                   Database.Datalog.Database
                   Database.Datalog.Errors
                   Database.Datalog.Evaluate
                   Database.Datalog.MagicSets
                   Database.Datalog.Relation
                   Database.Datalog.Rules
                   Database.Datalog.Stratification
  build-depends: base == 4.*,
                 containers,
                 unordered-containers,
                 hashable,
                 exceptions >= 0.5 && < 0.9,
                 text,
                 transformers >= 0.3 && < 0.5,
                 vector >= 0.9 && < 0.11
  hs-source-dirs: src
  ghc-options: -Wall -auto-all

executable datalog-repl
  default-language: Haskell2010
  main-is: Main.hs
  other-modules: Parser, Commands
  hs-source-dirs: tools/repl
  ghc-options: -Wall -auto-all
  build-depends: base == 4.*,
                 datalog,
                 containers,
                 exceptions >= 0.5 && < 0.9,
                 hashable,
                 haskeline,
                 parsec,
                 pretty,
                 text,
                 transformers,
                 unordered-containers,
                 vector

test-suite NQueensTest
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: NQueens.hs
  ghc-options: -Wall -auto-all
  ghc-prof-options: -auto-all
  build-depends: datalog,
                 base == 4.*,
                 text,
                 containers,
                 hashable,
                 test-framework,
                 test-framework-hunit,
                 HUnit

test-suite AncestorTest
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: AncestorTest.hs
  ghc-options: -Wall
  ghc-prof-options: -auto-all
  build-depends: datalog,
                 base == 4.*,
                 text,
                 containers,
                 test-framework,
                 test-framework-hunit,
                 HUnit

test-suite WorksForTest
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: WorksForTest.hs
  ghc-options: -Wall
  ghc-prof-options: -auto-all
  build-depends: datalog,
                 base == 4.*,
                 text,
                 containers,
                 hashable,
                 test-framework,
                 test-framework-hunit,
                 HUnit

source-repository head
  type: git
  location: git://github.com/travitch/datalog.git
